--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "engines": {
     "vscode": "^1.84.0"
   },
+  "publisher": "sunggun",
+  "license": "SEE LICENSE IN LICENSE",
+  "author": {
+    "name": "Sunggun Yu",
+    "email": "sunggun.dev@gmail.com",
+    "url": "https://github.com/sunggun-yu"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/sunggun-yu/vscode-kubemani-diff"
