fix: add KubeMani Diff prefix for context menu title

--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
       },
       {
         "command": "kubemani-diff.selectFiles",
-        "title": "Select Kubernetes Manifest files to compare",
+        "title": "KubeMani Diff: Select Kubernetes Manifest files to compare",
         "category": "KubeMani Diff"
       },
       {
